--- a/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
+++ b/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="entradaDeDatos.cs" />
     <Compile Include="formatoCSV.cs" />
+    <Compile Include="formatoDATA.cs" />
     <Compile Include="MainForm.cs" />
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
