Detección de errores tipograficos implementado
Instancias fuera del dominio para los categoricos, se calcula la distancia de levenshtein con cada uno de los del dominio del atributo y se reemplaza por el de menor distancia

--- a/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
+++ b/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
@@ -71,6 +71,10 @@
     </Compile>
     <Compile Include="ConjuntoDeDatosExtendido.cs" />
     <Compile Include="entradaDeDatos.cs" />
+    <Compile Include="erroresTipograficos.cs" />
+    <Compile Include="erroresTipograficos.Designer.cs">
+      <DependentUpon>erroresTipograficos.cs</DependentUpon>
+    </Compile>
     <Compile Include="formatoCSV.cs" />
     <Compile Include="formatoDATA.cs" />
     <Compile Include="llenarValoresFaltantes.cs" />
@@ -112,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AprendizajeMaquinaForm.resx">
       <DependentUpon>AprendizajeMaquinaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="erroresTipograficos.resx">
+      <DependentUpon>erroresTipograficos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="llenarValoresFaltantes.resx">
       <DependentUpon>llenarValoresFaltantes.cs</DependentUpon>
