--- a/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
+++ b/Proyecto Mineria de Datos/Proyecto Mineria de Datos.csproj
@@ -69,6 +69,10 @@
     <Compile Include="AprendizajeMaquinaForm.Designer.cs">
       <DependentUpon>AprendizajeMaquinaForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="buscarYReemplazar.cs" />
+    <Compile Include="buscarYReemplazar.Designer.cs">
+      <DependentUpon>buscarYReemplazar.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConjuntoDeDatosExtendido.cs" />
     <Compile Include="entradaDeDatos.cs" />
     <Compile Include="erroresTipograficos.cs" />
@@ -116,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AprendizajeMaquinaForm.resx">
       <DependentUpon>AprendizajeMaquinaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="buscarYReemplazar.resx">
+      <DependentUpon>buscarYReemplazar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="erroresTipograficos.resx">
       <DependentUpon>erroresTipograficos.cs</DependentUpon>
